Continued work on the SettingsComponent

--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.html
@@ -26,6 +26,7 @@
                (change)="onServerUrlChange(serverUrl)">
       </md-input-container>
       <md-checkbox
+        cdk-focus-start
         class="flex-item"
         (change)="onThemeChange()"
         [(ngModel)]="nightTheme">
