--- a/src/app/components/generic/books-configuration/books-configuration.component.html
+++ b/src/app/components/generic/books-configuration/books-configuration.component.html
@@ -3,6 +3,7 @@
   [configuration]="book"
   [availableBooks]="availableBooks"
   (changeBookConfiguration)="onChangeBookConfiguration()"
+  (invalidateBookConfiguration)="onInvalidateBookConfiguration()"
   (deleteBookConfiguration)="onDeleteBookConfiguration(book)">
 </gurpsy-book-configuration>
 <div class="addBookConfiguration">
