Continued work on the settingsDialog

--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.html
@@ -37,10 +37,7 @@
 
   <md-card>
     <div class="dialogCardHeader">
-      {{'DIALOG.SETTINGS.LIBRARY_SETTINGS.HEADER'| translate}}
-    </div>
-    <div class="settingsCardBody">
-      {{'DIALOG.SETTINGS.LIBRARY_SETTINGS.BODY'| translate}}
+      {{'DIALOG.SETTINGS.REFERENCE_SETTINGS.HEADER'| translate}}
     </div>
     <gurpsy-books-configuration
       (changeBooksConfiguration)="onChangeBooksConfiguration()">
