--- a/src/app/components/generic/books-configuration/books-configuration.component.html
+++ b/src/app/components/generic/books-configuration/books-configuration.component.html
@@ -8,10 +8,10 @@
 </gurpsy-book-configuration>
 <div class="addBookConfiguration">
   <button
-    md-raised-button
+    md-icon-button
     color="primary"
     [disabled]="!validConfigurations || availableBooks.length == 0"
     (click)="onNewBookConfiguration()">
-    {{'BOOKS_CONFIGURATION.ADD_BOOK'| translate}}
+    <md-icon color="primary">add_box</md-icon>
   </button>
 </div>
