Added buttons to the page-reference component

--- a/src/app/components/generic/page-reference/page-reference.component.scss
+++ b/src/app/components/generic/page-reference/page-reference.component.scss
@@ -1,1 +1,8 @@
-//@import "../../../../gurpsy-material-theme";
+button {
+  min-width: inherit;
+  line-height: inherit;
+  padding: 0px;
+  font-size: 13px;
+  font-family: 'Abel', sans-serif;
+
+}
