--- a/src/gurpsy-styles.scss
+++ b/src/gurpsy-styles.scss
@@ -11,7 +11,7 @@ body {
 md-sidenav {
   width: 200px;
 
-  .sideNavigationContent .sideNavigationContentLine md-icon {
+  .sideNavigationContent .sideNavigationButton md-icon {
     margin-right: 16px;
 
     svg {
