--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -13,49 +13,49 @@
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.GENERAL)"
             [class.selected]="sheetBodyContent === sheetBodyComponents.GENERAL"
-            class="sideNavigationContentLine">
+            class="sideNavigationButton">
       <md-icon>accessibility</md-icon>
       <span fxFlex="100%">{{'SUBJECT.GENERAL'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.ADVANTAGES)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.ADVANTAGES"
-            class="sideNavigationContentLine">
+            class="sideNavigationButton">
       <md-icon>hearing</md-icon>
       <span fxFlex="100%">{{'SUBJECT.DIS_ADVANTAGES'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.SKILLS)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.SKILLS"
-            class="sideNavigationContentLine">
+            class="sideNavigationButton">
       <md-icon>school</md-icon>
       <span fxFlex="100%">{{'SUBJECT.SKILLS'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.MAGIC)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.MAGIC"
-            class="sideNavigationContentLine">
+            class="sideNavigationButton">
       <md-icon>flash_on</md-icon>
       <span fxFlex="100%">{{'SUBJECT.MAGIC'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.EQUIPMENT)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.EQUIPMENT"
-            class="sideNavigationContentLine">
+            class="sideNavigationButton">
       <md-icon>card_travel</md-icon>
       <span fxFlex="100%">{{'SUBJECT.EQUIPMENT'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.NOTES)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.NOTES"
-            class="sideNavigationContentLine">
+            class="sideNavigationButton">
       <md-icon>mode_edit</md-icon>
       <span fxFlex="100%">{{'SUBJECT.NOTES'| translate}}</span>
     </button>
     <button md-button
             (click)="onLibraryClick()"
             [class.selected]="showLibrary"
-            class="sideNavigationContentLine">
+            class="sideNavigationButton">
       <md-icon svgIcon="books"></md-icon>
       <span fxFlex="100%">{{'SUBJECT.LIBRARY'| translate}}</span>
     </button>
