Added a seperator line for the sidenav menu items

--- a/src/app/components/side-navigation/_side-navigation.component.scss
+++ b/src/app/components/side-navigation/_side-navigation.component.scss
@@ -30,6 +30,11 @@
           color: mat-color($primary);
         }
       }
+
+      .seperator {
+        border-top: solid mat-color($accent) 1px;
+        margin: 6px 0px 8px 0px;
+      }
     }
   }
 }
