--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -52,6 +52,8 @@
       <md-icon>mode_edit</md-icon>
       <span fxFlex="100%">{{'SUBJECT.NOTES'| translate}}</span>
     </button>
+
+    <div class="seperator"></div>
     <button md-button
             (click)="onLibraryClick()"
             [class.selected]="showLibrary"
