--- a/src/gurpsy-palette.scss
+++ b/src/gurpsy-palette.scss
@@ -137,61 +137,65 @@ $gurpsy-red: (
 );
 
 $gurpsy-day-theme-foreground: (
-  base: black,
-  divider: rgba(black, 0.12),
-  dividers: rgba(black, 0.12),
-  disabled: rgba(black, 0.38),
-  disabled-button: rgba(black, 0.38),
-  disabled-text: rgba(black, 0.38),
-  hint-text: rgba(black, 0.38),
-  secondary-text: rgba(black, 0.54),
-  icon: rgba(black, 0.54),
-  icons: rgba(black, 0.54),
-  text: rgba(black, 0.87)
+  base:               black,
+  divider:            rgba(black, 0.12),
+  dividers:           rgba(black, 0.12),
+  disabled:           rgba(black, 0.38),
+  disabled-button:    rgba(black, 0.38),
+  disabled-text:      rgba(black, 0.38),
+  hint-text:          rgba(black, 0.38),
+  secondary-text:     rgba(black, 0.54),
+  icon:               rgba(black, 0.54),
+  icons:              rgba(black, 0.54),
+  text:               rgba(black, 0.87),
+  slider-off:         rgba(black, 0.26),
+  slider-off-active:  rgba(black, 0.38),
 );
 
 $gurpsy-day-theme-background: (
-  status-bar: map_get($gurpsy-green, 300),
-  app-bar: map_get($gurpsy-green, 300),
-  background: map_get($gurpsy-green, 0),
-  hover: map_get($gurpsy-green, 50),
-  card: white,
-  dialog: white,
-  disabled-button: rgba(black, 0.12),
-  raised-button: map_get($gurpsy-green, 100),
-  focused-button: rgba(black, 0.12),
-  selected-button: map_get($mat-grey, 300),
+  status-bar:               map_get($gurpsy-green, 300),
+  app-bar:                  map_get($gurpsy-green, 300),
+  background:               map_get($gurpsy-green, 0),
+  hover:                    map_get($gurpsy-green, 50),
+  card:                     white,
+  dialog:                   white,
+  disabled-button:          rgba(black, 0.12),
+  raised-button:            map_get($gurpsy-green, 100),
+  focused-button:           rgba(black, 0.12),
+  selected-button:          map_get($mat-grey, 300),
   selected-disabled-button: map_get($mat-grey, 400),
-  disabled-button-toggle: map_get($mat-grey, 200)
+  disabled-button-toggle:   map_get($mat-grey, 200)
 );
 
 $gurpsy-night-theme-foreground: (
-  base: white,
-  divider: rgba(white, 0.12),
-  dividers: rgba(white, 0.12),
-  disabled: rgba(white, 0.3),
-  disabled-button: rgba(white, 0.3),
-  disabled-text: rgba(white, 0.3),
-  hint-text: map_get($gurpsy-light-blue, 100),
-  secondary-text: rgba(white, 0.4),
-  icon: white,
-  icons: white,
-  text: white
+  base:               white,
+  divider:            rgba(white, 0.12),
+  dividers:           rgba(white, 0.12),
+  disabled:           rgba(white, 0.3),
+  disabled-button:    rgba(white, 0.3),
+  disabled-text:      rgba(white, 0.3),
+  hint-text:          map_get($gurpsy-light-blue, 100),
+  secondary-text:     rgba(white, 0.4),
+  icon:               white,
+  icons:              white,
+  text:               white,
+  slider-off:         rgba(white, 0.3),
+  slider-off-active:  rgba(white, 0.3),
 );
 
 $gurpsy-night-theme-background: (
-  status-bar: black,
-  app-bar: map_get($gurpsy-dark-blue, 500),
-  background: map-get($gurpsy-dark-blue, 800),
-  hover: rgba(white, 0.04),
-  card: map_get($gurpsy-dark-blue, 500),
-  dialog: map_get($gurpsy-dark-blue, 700),
-  disabled-button: map_get($gurpsy-dark-blue, 300),
-  raised-button: map-get($gurpsy-dark-blue, 800),
-  focused-button: rgba(white, 0.12),
-  selected-button: map_get($gurpsy-light-blue, 900),
+  status-bar:               black,
+  app-bar:                  map_get($gurpsy-dark-blue, 500),
+  background:               map-get($gurpsy-dark-blue, 800),
+  hover:                    rgba(white, 0.04),
+  card:                     map_get($gurpsy-dark-blue, 500),
+  dialog:                   map_get($gurpsy-dark-blue, 700),
+  disabled-button:          map_get($gurpsy-dark-blue, 300),
+  raised-button:            map-get($gurpsy-dark-blue, 800),
+  focused-button:           rgba(white, 0.12),
+  selected-button:          map_get($gurpsy-light-blue, 900),
   selected-disabled-button: map_get($gurpsy-dark-blue, 300),
-  disabled-button-toggle: map_get($mat-grey, 1000)
+  disabled-button-toggle:   map_get($mat-grey, 1000)
 );
 
 
