Added some styling for page-reference buttons

--- a/src/app/components/generic/page-reference/page-reference.component.html
+++ b/src/app/components/generic/page-reference/page-reference.component.html
@@ -1,1 +1,3 @@
-<button md-button (click)="onGotoReference()">{{pageReference}}</button>
+<div class="pageReference">
+  <button md-button (click)="onGotoReference()">{{pageReference}}</button>
+</div>
