--- a/src/gurpsy-material-theme.scss
+++ b/src/gurpsy-material-theme.scss
@@ -3,12 +3,12 @@
 @import "app/components/dialog/dialog.component";
 @import "app/components/dialog/about-dialog/about-dialog.component";
 @import "app/components/dialog/open-sheet-dialog/open-sheet-dialog.component";
+@import "app/components/generic/page-reference/page-reference.component";
 @import "app/components/sheet/sheet.component";
 @import "app/components/side-navigation/side-navigation.component";
 
+
 @include mat-core();
-
-
 
 @function gurpsy-dark-theme($primary, $accent, $warn: mat-palette($mat-red)) {
   @return (
@@ -48,6 +48,7 @@ $dark-theme: gurpsy-dark-theme($dark-primary, $dark-accent, $dark-warn);
   @include gurpsy-about-dialog-theme($theme);
   @include gurpsy-dialog-theme($theme);
   @include gurpsy-open-sheet-dialog-theme($theme);
+  @include gurpsy-page-reference-theme($theme);
   @include gurpsy-sheet-theme($theme);
   @include gurpsy-side-navigation-theme($theme);
 }
