--- a/src/app/components/generic/page-reference/page-reference.component.html
+++ b/src/app/components/generic/page-reference/page-reference.component.html
@@ -1,3 +1,3 @@
 <div class="pageReference">
-  <button md-button (click)="onGotoReference()">{{pageReference}}</button>
+  <button md-button [disabled]="!available" (click)="onGotoReference()">{{pageReference}}</button>
 </div>
