--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -32,7 +32,7 @@
           <md-icon svgIcon="d6"></md-icon>
           <span>{{ 'MENU.THROW_DICE' | translate }}</span>
         </button>
-        <button md-menu-item (click)="onOpenDeleteSettingsDialog()">
+        <button md-menu-item (click)="onOpenSettingsDialog()">
           <md-icon>settings</md-icon>
           <span>{{ 'MENU.SETTINGS' | translate }}</span>
         </button>
@@ -52,8 +52,6 @@
       <gurpsy-sheet></gurpsy-sheet>
     </md-card>
   </ng-template>
-
-
 </md-sidenav-container>
 
 
