Renamed the library to book-viewer component

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -45,7 +45,7 @@
   </md-toolbar>
 
   <div *ngIf="showLibrary; else elseBlock">
-    <gurpsy-library></gurpsy-library>
+    <gurpsy-book-viewer></gurpsy-book-viewer>
   </div>
   <ng-template #elseBlock>
     <md-card>
