Going for a new structure regarding the book configurations

--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.html
@@ -26,7 +26,7 @@
                (change)="onServerUrlChange(serverUrl)">
       </md-input-container>
       <md-checkbox
-        cdk-focus-start
+        cdk-focus-region-start
         class="flex-item"
         (change)="onThemeChange()"
         [(ngModel)]="nightTheme">
