--- a/src/app/components/sheet/sheet.component.scss
+++ b/src/app/components/sheet/sheet.component.scss
@@ -4,6 +4,7 @@
   margin: 3px 3px 3px 3px;
   font-size: 13px;
   font-family: 'Abel', sans-serif !important;
+  height: calc(100% - 8px);
 }
 
 .sheetComponentHeader {
