--- a/src/app/components/side-navigation/_side-navigation.component.scss
+++ b/src/app/components/side-navigation/_side-navigation.component.scss
@@ -1,12 +1,12 @@
 @import '~@angular/material/theming';
 
 @mixin gurpsy-side-navigation-theme($theme) {
-  $accent: map-get($theme, accent);
   $primary: map-get($theme, primary);
   $backgroundMap: map-get($theme, background);
   $foregroundMap: map-get($theme, foreground);
   $background: map-get($backgroundMap, background);
   $selectedButton: map-get($backgroundMap, raised-button);
+  $statusBar: map-get($backgroundMap, status-bar);
   $hintText: map_get($foregroundMap, hint-text);
 
   .mat-sidenav-content {
@@ -32,7 +32,7 @@
       }
 
       .seperator {
-        border-top: solid mat-color($accent) 1px;
+        border-top: solid $statusBar 1px;
         margin: 6px 0px 8px 0px;
       }
     }
