--- a/src/app/gurpsy.component.scss
+++ b/src/app/gurpsy.component.scss
@@ -11,4 +11,19 @@ md-toolbar {
   }
 }
 
+md-sidenav {
+  width: 240px;
+
+  .sideNavigationContent .sideNavigationButton md-icon {
+    margin-right: 16px;
+
+    svg {
+      width: 24px;
+      height: 24px;
+    }
+  }
+}
+
+
+
 
