--- a/src/app/components/sheet/reusable/encumbrance/encumbrance.component.html
+++ b/src/app/components/sheet/reusable/encumbrance/encumbrance.component.html
@@ -15,31 +15,46 @@
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.NONE' | translate }}</td>
-          <td>{{sheet.secondaryCharacteristics.maxLoad.none}}</td>
+          <td>
+            <gurpsy-weight [weight]="sheet.secondaryCharacteristics.maxLoad.none">
+            </gurpsy-weight>
+          </td>
           <td>{{sheet.secondaryCharacteristics.move.none}}</td>
           <td>{{sheet.secondaryCharacteristics.dodge.none}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.LIGHT' | translate }}</td>
-          <td>{{sheet.secondaryCharacteristics.maxLoad.light}}</td>
+          <td>
+            <gurpsy-weight [weight]="sheet.secondaryCharacteristics.maxLoad.light">
+            </gurpsy-weight>
+          </td>
           <td>{{sheet.secondaryCharacteristics.move.light}}</td>
           <td>{{sheet.secondaryCharacteristics.dodge.light}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.MEDIUM' | translate }}</td>
-          <td>{{sheet.secondaryCharacteristics.maxLoad.medium}}</td>
+          <td>
+            <gurpsy-weight [weight]="sheet.secondaryCharacteristics.maxLoad.medium">
+            </gurpsy-weight>
+          </td>
           <td>{{sheet.secondaryCharacteristics.move.medium}}</td>
           <td>{{sheet.secondaryCharacteristics.dodge.medium}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.HEAVY' | translate }}</td>
-          <td>{{sheet.secondaryCharacteristics.maxLoad.heavy}}</td>
+          <td>
+            <gurpsy-weight [weight]="sheet.secondaryCharacteristics.maxLoad.heavy">
+            </gurpsy-weight>
+          </td>
           <td>{{sheet.secondaryCharacteristics.move.heavy}}</td>
           <td>{{sheet.secondaryCharacteristics.dodge.heavy}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.XHEAVY' | translate }}</td>
-          <td>{{sheet.secondaryCharacteristics.maxLoad.xHeavy}}</td>
+          <td>
+            <gurpsy-weight [weight]="sheet.secondaryCharacteristics.maxLoad.xHeavy">
+            </gurpsy-weight>
+          </td>
           <td>{{sheet.secondaryCharacteristics.move.xHeavy}}</td>
           <td>{{sheet.secondaryCharacteristics.dodge.xHeavy}}</td>
         </tr>
