--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.html
@@ -25,13 +25,19 @@
         <input mdInput placeholder="{{'DIALOG.SETTINGS.SERVER_URL'| translate}}" [(ngModel)]="serverUrl"
                (change)="onServerUrlChange(serverUrl)">
       </md-input-container>
-      <md-checkbox
+      <md-slide-toggle
         cdk-focus-region-start
         class="flex-item"
         (change)="onThemeChange()"
         [(ngModel)]="nightTheme">
         {{'DIALOG.SETTINGS.NIGHT_THEME'| translate}}
-      </md-checkbox>
+      </md-slide-toggle>
+      <md-slide-toggle
+        class="flex-item"
+        (change)="onMetricsChange()"
+        [(ngModel)]="siMetrics">
+        {{'DIALOG.SETTINGS.SI_METRICS'| translate}}
+      </md-slide-toggle>
     </div>
   </md-card>
 
