Fixed incorrect color for the text in the header.

--- a/src/app/components/side-navigation/side-navigation.component.scss
+++ b/src/app/components/side-navigation/side-navigation.component.scss
@@ -13,11 +13,13 @@
     }
     .player {
       font-size: x-small;
+      color: white;
       font-weight: 100;
       padding: 10px 0px 0px 8px;
     }
     .name {
       font-size: small;
+      color: white;
       font-weight: 100;
       padding: 2px 0px 0px 8px;
     }
