--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -28,42 +28,42 @@
             [class.selected]="sheetBodyContent === sheetBodyComponents.GENERAL"
             class="sideNavigationButton">
       <md-icon>accessibility</md-icon>
-      <span fxFlex="100%">{{'SUBJECT.GENERAL'| translate}}</span>
+      <span fxFlex="100%">{{'SIDE_NAVIGATION.GENERAL'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.ADVANTAGES)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.ADVANTAGES"
             class="sideNavigationButton">
       <md-icon>hearing</md-icon>
-      <span fxFlex="100%">{{'SUBJECT.DIS_ADVANTAGES'| translate}}</span>
+      <span fxFlex="100%">{{'SIDE_NAVIGATION.DIS_ADVANTAGES'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.SKILLS)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.SKILLS"
             class="sideNavigationButton">
       <md-icon>school</md-icon>
-      <span fxFlex="100%">{{'SUBJECT.SKILLS'| translate}}</span>
+      <span fxFlex="100%">{{'SIDE_NAVIGATION.SKILLS'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.MAGIC)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.MAGIC"
             class="sideNavigationButton">
       <md-icon>flash_on</md-icon>
-      <span fxFlex="100%">{{'SUBJECT.MAGIC'| translate}}</span>
+      <span fxFlex="100%">{{'SIDE_NAVIGATION.MAGIC'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.EQUIPMENT)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.EQUIPMENT"
             class="sideNavigationButton">
       <md-icon>card_travel</md-icon>
-      <span fxFlex="100%">{{'SUBJECT.EQUIPMENT'| translate}}</span>
+      <span fxFlex="100%">{{'SIDE_NAVIGATION.EQUIPMENT'| translate}}</span>
     </button>
     <button md-button
             (click)="onSheetBodyClick(sheetBodyComponents.NOTES)"
             [class.selected]="sheetBodyContent == sheetBodyComponents.NOTES"
             class="sideNavigationButton">
       <md-icon>mode_edit</md-icon>
-      <span fxFlex="100%">{{'SUBJECT.NOTES'| translate}}</span>
+      <span fxFlex="100%">{{'SIDE_NAVIGATION.NOTES'| translate}}</span>
     </button>
 
     <div class="seperator"></div>
@@ -72,7 +72,7 @@
             [class.selected]="showLibrary"
             class="sideNavigationButton">
       <md-icon svgIcon="books"></md-icon>
-      <span fxFlex="100%">{{'SUBJECT.LIBRARY'| translate}}</span>
+      <span fxFlex="100%">{{'SIDE_NAVIGATION.LIBRARY'| translate}}</span>
     </button>
   </div>
 </div>
