First steps into making the portait editable

--- a/src/app/components/sheet/reusable/portrait/portrait.component.html
+++ b/src/app/components/sheet/reusable/portrait/portrait.component.html
@@ -1,4 +1,5 @@
-<div class="sheetComponent portrait">
+<div class="sheetComponent portrait"
+     [ngClass]="{'editable': editMode}">
   <div class="sheetComponentHeader">
     {{ 'SHEET.PORTRAIT.PORTRAIT' | translate }}
   </div>
