--- a/src/app/components/sheet/_sheet.component.scss
+++ b/src/app/components/sheet/_sheet.component.scss
@@ -2,6 +2,12 @@
 
 @mixin gurpsy-sheet-theme($theme) {
   $primary: map-get($theme, primary);
+  $accent: map-get($theme, accent);
+
+  .sheetComponent.editable {
+    border: mat-color($accent) solid 1px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px mat-color($accent);
+  }
 
   .sheetComponentHeader, .headerRow {
     background: mat-color($primary);
