Added a dialog to handle image cropping

--- a/src/app/components/sheet/reusable/portrait/portrait.component.html
+++ b/src/app/components/sheet/reusable/portrait/portrait.component.html
@@ -3,7 +3,8 @@
   <div class="sheetComponentHeader">
     {{ 'SHEET.PORTRAIT.PORTRAIT' | translate }}
   </div>
-  <div class="sheetComponentBody">
+  <div class="sheetComponentBody" (click)="selectPortrait()">
+    <input accept="image/png" type="file" (change)="onNativeInputFileSelect($event)" #inputFile hidden/>
     <img src="assets/images/empty-portrait.png" alt="portrait">
   </div>
 </div>
