Added component inheritence, resolves issue #36

--- a/src/app/components/sheet/reusable/equipment/equipment.component.html
+++ b/src/app/components/sheet/reusable/equipment/equipment.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="sheetComponentBody">
     <table class="headerRowTable">
-      <tr *ngFor="let equipment of sheet.equipments;">
+      <tr *ngFor="let equipment of readSheet.equipments;">
         <td>{{equipment.name}}</td>
         <td>
           <gurpsy-page-reference [pageReference]="equipment.pageReference"></gurpsy-page-reference>
