--- a/src/app/components/sheet/reusable/identity/identity.component.html
+++ b/src/app/components/sheet/reusable/identity/identity.component.html
@@ -6,15 +6,15 @@
     <table>
       <tr>
         <td>{{ 'SHEET.IDENTITY.NAME' | translate }}</td>
-        <td>{{sheet.metaData.identity.name}}</td>
+        <td>{{readSheet.metaData.identity.name}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.IDENTITY.TITLE' | translate }}</td>
-        <td>{{sheet.metaData.identity.title}}</td>
+        <td>{{readSheet.metaData.identity.title}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.IDENTITY.RELIGION' | translate }}</td>
-        <td>{{sheet.metaData.identity.religion}}</td>
+        <td>{{readSheet.metaData.identity.religion}}</td>
       </tr>
     </table>
   </div>
