--- a/src/app/components/sheet/reusable/player-information/player-information.component.html
+++ b/src/app/components/sheet/reusable/player-information/player-information.component.html
@@ -6,15 +6,15 @@
     <table>
       <tr>
         <td>{{ 'SHEET.PLAYER_INFORMATION.PLAYER' | translate }}</td>
-        <td>{{sheet.metaData.playerInformation.player}}</td>
+        <td>{{readSheet.metaData.playerInformation.player}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.PLAYER_INFORMATION.CAMPAIGN' | translate }}</td>
-        <td>{{sheet.metaData.playerInformation.campaign}}</td>
+        <td>{{readSheet.metaData.playerInformation.campaign}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}</td>
-        <td>{{sheet.metaData.playerInformation.createdOn}}</td>
+        <td>{{readSheet.metaData.playerInformation.createdOn}}</td>
       </tr>
     </table>
   </div>
