--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -15,10 +15,10 @@
       </div>
     </div>
     <div class="flex-item player">
-      {{sheet.metaData.playerInformation.player}}
+      {{readSheet.metaData.playerInformation.player}}
     </div>
     <div class="flex-item name">
-      {{sheet.metaData.identity.name}}
+      {{readSheet.metaData.identity.name}}
     </div>
   </div>
   <div class="sideNavigationContent flex-item"
