--- a/src/app/components/sheet/reusable/attributes/attributes.component.html
+++ b/src/app/components/sheet/reusable/attributes/attributes.component.html
@@ -6,55 +6,55 @@
     <table>
       <tr>
         <td>{{ 'SHEET.ATTRIBUTES.STRENGTH' | translate }}</td>
-        <td>{{sheet.attributes.strength}}</td>
+        <td>{{readSheet.attributes.strength}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.ATTRIBUTES.DEXTERITY' | translate }}</td>
-        <td>{{sheet.attributes.dexterity}}</td>
+        <td>{{readSheet.attributes.dexterity}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.ATTRIBUTES.INTELLIGENCE' | translate }}</td>
-        <td>{{sheet.attributes.intelligence}}</td>
+        <td>{{readSheet.attributes.intelligence}}</td>
       </tr>
       <tr class="last">
         <td>{{ 'SHEET.ATTRIBUTES.HEALTH' | translate }}</td>
-        <td>{{sheet.attributes.health}}</td>
+        <td>{{readSheet.attributes.health}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.ATTRIBUTES.WILL' | translate }}</td>
-        <td>{{sheet.secondaryCharacteristics.will}}</td>
+        <td>{{readSheet.secondaryCharacteristics.will}}</td>
       </tr>
       <tr class="last">
         <td>{{ 'SHEET.ATTRIBUTES.FRIGHT' | translate }}</td>
-        <td>{{sheet.secondaryCharacteristics.frightCheck}}</td>
+        <td>{{readSheet.secondaryCharacteristics.frightCheck}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.ATTRIBUTES.SPEED' | translate }}</td>
-        <td>{{sheet.secondaryCharacteristics.basicSpeed}}</td>
+        <td>{{readSheet.secondaryCharacteristics.basicSpeed}}</td>
       </tr>
       <tr class="last">
         <td>{{ 'SHEET.ATTRIBUTES.MOVE' | translate }}</td>
-        <td>{{sheet.secondaryCharacteristics.basicMove}}</td>
+        <td>{{readSheet.secondaryCharacteristics.basicMove}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.ATTRIBUTES.PERCEPTION' | translate }}</td>
-        <td>{{sheet.secondaryCharacteristics.perception}}</td>
+        <td>{{readSheet.secondaryCharacteristics.perception}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.ATTRIBUTES.VISION' | translate }}</td>
-        <td>{{sheet.secondaryCharacteristics.vision}}</td>
+        <td>{{readSheet.secondaryCharacteristics.vision}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.ATTRIBUTES.HEARING' | translate }}</td>
-        <td>{{sheet.secondaryCharacteristics.hearing}}</td>
+        <td>{{readSheet.secondaryCharacteristics.hearing}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.ATTRIBUTES.TASTE' | translate }}</td>
-        <td>{{sheet.secondaryCharacteristics.tasteAndSmell}}</td>
+        <td>{{readSheet.secondaryCharacteristics.tasteAndSmell}}</td>
       </tr>
       <tr class="last">
         <td>{{ 'SHEET.ATTRIBUTES.TOUCH' | translate }}</td>
-        <td>{{sheet.secondaryCharacteristics.touch}}</td>
+        <td>{{readSheet.secondaryCharacteristics.touch}}</td>
       </tr>
       <tr>
         <td class="singleColumn" colspan="2">
@@ -67,14 +67,14 @@
                  fxLayoutWrap="nowrap"
                  fxLayoutGap="8px">
               <div class="flex-item">{{ 'SHEET.ATTRIBUTES.THR' | translate }}</div>
-              <div class="flex-item">{{sheet.secondaryCharacteristics.damageThrusting}}</div>
+              <div class="flex-item">{{readSheet.secondaryCharacteristics.damageThrusting}}</div>
             </div>
             <div class="flex-item flex-container"
                  fxLayout="row"
                  fxLayoutWrap="nowrap"
                  fxLayoutGap="8px">
               <div class="flex-item">{{ 'SHEET.ATTRIBUTES.SW' | translate }}</div>
-              <div class="flex-item">{{sheet.secondaryCharacteristics.damageSwinging}}</div>
+              <div class="flex-item">{{readSheet.secondaryCharacteristics.damageSwinging}}</div>
             </div>
           </div>
         </td>
