--- a/src/app/components/sheet/reusable/disadvantages/disadvantages.component.html
+++ b/src/app/components/sheet/reusable/disadvantages/disadvantages.component.html
@@ -6,7 +6,7 @@
         <td>{{ 'SHEET.ADVANTAGES.PTS' | translate }}</td>
         <td>{{ 'SHEET.ADVANTAGES.REF' | translate }}</td>
       </tr>
-      <tr *ngFor="let disadvantage of sheet.disadvantages;">
+      <tr *ngFor="let disadvantage of readSheet.disadvantages;">
         <td>{{disadvantage.name}}</td>
         <td>{{disadvantage.points}}</td>
         <td>
