Code improvements related to model updating components

--- a/src/app/components/dialog/portrait-selector-dialog/portrait-selector-dialog.component.html
+++ b/src/app/components/dialog/portrait-selector-dialog/portrait-selector-dialog.component.html
@@ -1,6 +1,6 @@
 <p>
   portrait-selector-dialog works!
 </p>
-<p *ngIf="file">
-  found file {{file.name}}
+<p *ngIf="data">
+  found file {{data.name}}
 </p>
