--- a/src/app/components/sheet/reusable/notes/notes.component.html
+++ b/src/app/components/sheet/reusable/notes/notes.component.html
@@ -1,8 +1,9 @@
-<div class="sheetComponent">
+<div class="sheetComponent"
+     [ngClass]="{'editable': editMode}">
   <div class="sheetComponentHeader">
     {{ 'SHEET.NOTES' | translate }}
   </div>
-  <div class="sheetComponentBody">
+  <div class="sheetComponentBody" (click)="onRequestUpdate()">
     <div *ngFor="let note of readSheet.notes;" class="note">
       <div class="noteHeader">{{note.name}}</div>
       <div class="noteBody">{{note.note}}</div>
