--- a/src/app/components/sheet/reusable/portrait/portrait.component.scss
+++ b/src/app/components/sheet/reusable/portrait/portrait.component.scss
@@ -1,18 +1,14 @@
 .portrait {
   height: calc(100% - 8px);
-}
 
-.portrait .sheetComponentBody {
-  padding: 2px 2px 3px 2px;
-}
+  .sheetComponentBody {
+    padding: 2px 2px 3px 2px;
 
-.portrait.editable .sheetComponentBody {
-  cursor: pointer;
-}
-
-.portrait .sheetComponentBody img {
-  width: 100px;
-  padding: 0px 0px 0px 0px;
-  vertical-align: middle;
-  -webkit-clip-path: inset(1% 1% 1% 1%);
+    img {
+      width: 100px;
+      padding: 0px 0px 0px 0px;
+      vertical-align: middle;
+      -webkit-clip-path: inset(1% 1% 1% 1%);
+    }
+  }
 }
