--- a/src/app/components/dialog/menu/open-sheet-dialog/_open-sheet-dialog.component.scss
+++ b/src/app/components/dialog/menu/open-sheet-dialog/_open-sheet-dialog.component.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@import '../../../../../../node_modules/@angular/material/theming';
 
 @mixin gurpsy-open-sheet-dialog-theme($theme) {
   $accent: map-get($theme, accent);
