--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -26,7 +26,7 @@
       <md-icon>lock</md-icon>
     </button>
     <button md-icon-button
-            class="flex-item"
+            class="flex-item editable"
             fxShow="true"
             fxShow.xs="false"
             *ngIf="editMode"
