--- a/src/gurpsy-material-theme.scss
+++ b/src/gurpsy-material-theme.scss
@@ -1,12 +1,12 @@
 @import '~@angular/material/theming';
 @import 'gurpsy-palette';
+@import 'app/grupsy.component';
 @import "app/components/dialog/dialog.component";
 @import "app/components/dialog/menu/about-dialog/about-dialog.component";
 @import "app/components/dialog/menu/open-sheet-dialog/open-sheet-dialog.component";
 @import "app/components/generic/page-reference/page-reference.component";
 @import "app/components/sheet/sheet.component";
 @import "app/components/side-navigation/side-navigation.component";
-
 
 @include mat-core();
 
@@ -45,6 +45,7 @@ $dark-theme: gurpsy-dark-theme($dark-primary, $dark-accent, $dark-warn);
 @mixin gurpsy-theme($theme) {
   @include angular-material-theme($theme);
 
+  @include gurpsy-component-theme($theme);
   @include gurpsy-about-dialog-theme($theme);
   @include gurpsy-dialog-theme($theme);
   @include gurpsy-open-sheet-dialog-theme($theme);
