--- a/src/gurpsy-material-theme.scss
+++ b/src/gurpsy-material-theme.scss
@@ -7,6 +7,7 @@
 @import "app/components/generic/page-reference/page-reference.component";
 @import "app/components/sheet/sheet.component";
 @import "app/components/side-navigation/side-navigation.component";
+@import "app/components/dialog/model-updaters/portrait-updater-dialog/portrait-updater-dialog.component";
 
 @include mat-core();
 
@@ -52,6 +53,7 @@ $dark-theme: gurpsy-dark-theme($dark-primary, $dark-accent, $dark-warn);
   @include gurpsy-page-reference-theme($theme);
   @include gurpsy-sheet-theme($theme);
   @include gurpsy-side-navigation-theme($theme);
+  @include gurpsy-portrait-updater-dialog-theme($theme);
 }
 
 .day {
