--- a/src/app/components/dialog/model-updaters/portrait-updater-dialog/portrait-updater-dialog.component.html
+++ b/src/app/components/dialog/model-updaters/portrait-updater-dialog/portrait-updater-dialog.component.html
@@ -1,14 +1,12 @@
-<p *ngIf="data">
-  found file {{data.name}}
-</p>
+<md-dialog-content>
+  <img-cropper [image]="data"
+               [settings]="cropperSettings">
+  </img-cropper>
 
-<img-cropper [image]="data1"
-             [settings]="cropperSettings">
-
-</img-cropper>
-<div class="result" *ngIf="data1.image">
-  <img [src]="data1.image">
-</div>
+  <div class="result" *ngIf="data.image">
+    <img [src]="data.image">
+  </div>
+</md-dialog-content>
 
 <md-dialog-actions align="end">
   <button md-button color="primary" (click)="onOk()"> {{'DIALOG.OK'| translate}}</button>
